src/objects/GLBL_Project__c.object
<CustomObject>
    <fields>
        <fullName>MPOT_Anchor_Image__c</fullName>
        <formula>IF(ISPICKVAL(MPOT_Anchor__c, &apos;Yes&apos;), IMAGE(&apos;/resource/MPOT_BlueAnchor&apos;, &apos;Yes&apos;) , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anchor Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPOT_Anchor__c</fullName>
        <label>Anchor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MPOT_Change_Regulatory_Impact_To__c</fullName>
        <label>Change Regulatory Impact To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MPOT_Changed_Anchor__c</fullName>
        <label>Changed Anchor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MPOT_Changed_Platforms__c</fullName>
        <label>Changed Drug Product/Platform Impacted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPOT_Changed_Regulatory_Impact_Level__c</fullName>
        <label>Change Regulatory Impact Level To</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MPOT_Change_Regulatory_Impact_To__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MPOT_Overdue__c</fullName>
        <description>Overdue calculation field</description>
        <formula>IF( ISPICKVAL( MPOT_Stage__c, &apos;Feasibility/Design – Post Gate 2&apos;)  || ISPICKVAL(MPOT_Stage__c, &apos;Implementation – Post Gate 3&apos;) || ISPICKVAL( MPOT_Stage__c, &apos;Approve to Scope – Post Gate 1&apos;),  
IF((TODAY() - 30 &gt; MPOT_Monthly_Update_Date__c), IMAGE(&apos;/resource/MPOT_RedStarLogo&apos;, &apos;Yes&apos;) , &apos;&apos;),
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPOT_Platforms__c</fullName>
        <label>Drug Product/Platform Impacted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPOT_Regulatory_Impact_Level__c</fullName>
        <label>Regulatory Impact Level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MPOT_Regulatory_Impact__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MPOT_Regulatory_Impact__c</fullName>
        <inlineHelpText>Reg. Submission and approval required.</inlineHelpText>
        <label>Regulatory Submission and Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MPOT_Submission_Date__c</fullName>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>MPOT_Admin_NRO_Change_Record_Requests</fullName>
        <columns>MPOT_Project_Name_CR__c</columns>
        <columns>MPOT_Project_Number__c</columns>
        <columns>MPOT_Network_Record_Owner__c</columns>
        <columns>MPOT_Owner_Name__c</columns>
        <columns>MPOT_Stage__c</columns>
        <columns>MPOT_Submission_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MPOT_NRO_Change_Record_Request_Indicator__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>MPOT_NRO_CR_Approved_Indicator__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>GLBL_Project__c.MPOT_Project</value>
        </filters>
        <label>Admin – NRO Change Record Requests</label>
        <language>en_US</language>
        <sharedTo>
            <group>MPOT_Database_Administrator</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>MPOT_Project</fullName>
        <active>true</active>
        <description>Record Type used for MPO Project</description>
        <label>MPOT Project</label>
    </recordTypes>
    <validationRules>
        <fullName>MPOT_Anchor_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISNEW(),NOT(ISPICKVAL(PRIORVALUE(MPOT_Anchor__c),&apos;&apos;))),((ISPICKVAL(MPOT_Anchor__c,&apos;&apos;)) &amp;&amp; RecordType.Name = &apos;MPOT Project&apos;))</errorConditionFormula>
        <errorDisplayField>MPOT_Anchor__c</errorDisplayField>
        <errorMessage>Anchor is required to save project</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MPOT_Regulatory_Impact_Level_Required</fullName>
        <active>true</active>
        <errorConditionFormula>(ISNEW() || NOT(ISPICKVAL(PRIORVALUE(MPOT_Regulatory_Impact_Level__c),&apos;&apos;)) || ISPICKVAL(PRIORVALUE(MPOT_Regulatory_Impact__c),&apos;No&apos;)) &amp;&amp; ISPICKVAL(MPOT_Regulatory_Impact__c, &apos;Yes&apos;) &amp;&amp; ISBLANK(TEXT(MPOT_Regulatory_Impact_Level__c))</errorConditionFormula>
        <errorDisplayField>MPOT_Regulatory_Impact_Level__c</errorDisplayField>
        <errorMessage>Regulatory Impact Level is required to save project</errorMessage>
    </validationRules>
</CustomObject>